--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -195,3 +195,10 @@ aside {
         margin-bottom: 0;
     }
 }
+
+em {
+    font-family: libertinus-serif-italic, zilla-slab, serif;
+    font-size: 105%;
+    font-style: italic;
+    line-height: 92%;
+}
