--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -196,7 +196,7 @@ aside {
     }
 }
 
-em {
+article p em {
     font-family: libertinus-serif-italic, zilla-slab, serif;
     font-size: 105%;
     font-style: italic;
