Color and font size for pagination links

--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -6,8 +6,9 @@
 .pagination {
   overflow: hidden; // clearfix
   // margin: 0 -1.5rem 1rem;
-  color: #ccc;
+  color: #eee;
   text-align: center;
+  font-size: 0.95rem;
 }
 
 // Pagination items can be `span`s or `a`s
