Adds chevrons to pagination
* Imports Fork-Awesome via CDN

--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -10,6 +10,10 @@
 @import url("https://code.cdn.mozilla.net/fonts/fira.css");
 @import url("https://code.cdn.mozilla.net/fonts/zilla-slab.css");
 
+// Fork-Awesome
+
+@import url("https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css");
+
 // Fonts used:
 
 // Source code blocks and inline code #####################
