--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -21,6 +21,9 @@
   &:first-child {
     // margin-bottom: -1px;
   }
+  i {
+      font-size: 0.75rem;
+  }
 }
 
 // Only provide a hover state for linked pagination items
@@ -29,6 +32,7 @@ a.pagination-item {
     &:hover {
         // background-color: #f5f5f5;
         color: $link-color;
+        text-decoration: none;
     }
 }
 
