--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -128,6 +128,7 @@ a[href^="#fnref:"] {
 }
 
 .footnote-back {
+    font-family: "Lucida Grande","Apple Symbols Regular","Arial Unicode MS";
     margin-left: .2rem;
     text-decoration: none;
     position: relative;
