Adds back to top caret via fork-awesome

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,5 +7,5 @@
             </picture>
         </a>
     </div>
-    <a class="backtotop" href="#">back to top</a>
+    <a class="backtotop" href="#">back to top&nbsp;<i class="fa fa-caret-up" ></i></a>
 </footer>
