--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -143,5 +143,6 @@ footer {
         @media (min-width:$large-breakpoint) {
             top: -2.2rem;
         }
+        i {font-size: 0.9rem;}
     }
 }
