Different font for footnote-back

--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -128,7 +128,7 @@ a[href^="#fnref:"] {
 }
 
 .footnote-back {
-    font-family: "Lucida Grande","Apple Symbols Regular","Arial Unicode MS";
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     margin-left: .2rem;
     text-decoration: none;
     position: relative;
