--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -128,15 +128,20 @@ a[href^="#fnref:"] {
 }
 
 .footnote-back {
-    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    visibility: hidden;
     margin-left: .2rem;
     text-decoration: none;
     position: relative;
     top: 0.1rem;
     border: 0;
+    &:focus,
     &:hover {
         border: none;
         color: $link-color;
+    }
+    &::before {
+        visibility: visible;
+        content: "\21A9";
     }
 }
 
