Changes HTML for some social links and first style changes
* Only changes the ones I actually use

--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -31,7 +31,7 @@
 
     {% if site.linkedin %}
         <a class="link" data-title="linkedin.com/in/{{ site.linkedin }}" href="http://linkedin.com/in/{{ site.linkedin }}" target="_blank">
-            <svg class="icon icon-linkedin"><use xlink:href="#icon-linkedin"></use></svg>
+            <i class="fa fa-linkedin"></i>
         </a>
     {% endif %}
 
@@ -55,7 +55,7 @@
 
     {% if site.github %}
         <a class="link" data-title="github.com/{{ site.github }}" href="https://github.com/{{ site.github }}" target="_blank">
-            <svg class="icon icon-github"><use xlink:href="#icon-github"></use></svg>
+            <i class="fa fa-github"></i>
         </a>
     {% endif %}
 
@@ -103,19 +103,19 @@
 
     {% if site.mastodon %}
         <a class="link" data-title="{{ site.mastodon }}" href="https://{{ site.mastodon }}" target="_blank">
-            <svg class="icon icon-mastodon"><use xlink:href="#icon-mastodon"></use></svg>
+            <i class="fa fa-mastodon"></i>
         </a>
     {% endif %}
 
     {% if site.keybase %}
         <a class="link" data-title="keybase.io/{{ site.keybase }}" href="https://keybase.io/{{ site.keybase }}" target="_blank" >
-            <svg class="icon icon-keybase" ><use xlink:href="#icon-keybase" ></use></svg>
+            <i class="fa fa-keybase" ></i>
         </a>
     {% endif %}
 
     {% if site.email %}
         <a class="link" data-title="{{ site.email }}" href="mailto:{{ site.email }}">
-            <svg class="icon icon-mail"><use xlink:href="#icon-mail"></use></svg>
+            <i class="fa fa-envelope"></i>
         </a>
     {% endif %}
 
