--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -1,116 +1,7 @@
 <div class="social-links">
-    {% if site.facebook %}
-        <a class="link" data-title="facebook.com/{{ site.facebook }}" href="http://facebook.com/{{ site.facebook }}" target="_blank">
-            <i class="fa fa-facebook"></i>
-        </a>
-    {% endif %}
-
-    {% if site.twitter %}
-        <a class="link" data-title="twitter.com/{{ site.twitter }}" href="http://twitter.com/{{ site.twitter }}" target="_blank">
-            <i class="fa fa-twitter"></i>
-        </a>
-    {% endif %}
-
-    {% if site.instagram %}
-        <a class="link" data-title="instagram.com/{{ site.instagram }}" href="http://instagram.com/{{ site.instagram }}" target="_blank">
-            <i class="fa fa-instagram"></i>
-        </a>
-    {% endif %}
-
-    {% if site.pinterest %}
-        <a class="link" data-title="pinterest.com/{{ site.pinterest }}" href="http://pinterest.com/{{ site.pinterest }}" target="_blank">
-            <i class="fa fa-pinterest"></i>
-        </a>
-    {% endif %}
-
-    {% if site.linkedin %}
-        <a class="link" data-title="linkedin.com/in/{{ site.linkedin }}" href="http://linkedin.com/in/{{ site.linkedin }}" target="_blank">
-            <i class="fa fa-linkedin"></i>
-        </a>
-    {% endif %}
-
-    {% if site.youtube %}
-        <a class="link" data-title="youtube.com/{{ site.youtube }}" href="http://youtube.com/{{ site.youtube }}" target="_blank">
-            <i class="fa fa-youtube-play"></i>
-        </a>
-    {% endif %}
-
-    {% if site.spotify %}
-        <a class="link" data-title="open.spotify.com/user/{{ site.spotify }}" href="https://open.spotify.com/user/{{ site.spotify }}" target="_blank">
-            <i class="fa fa-spotify"></i>
-        </a>
-    {% endif %}
-
-    {% if site.lastfm %}
-        <a class="link" data-title="last.fm/user/{{ site.lastfm }}" href="https://last.fm/user/{{ site.lastfm }}" target="_blank">
-            <i class="fa fa-lastfm"></i>
-        </a>
-    {% endif %}
-
-    {% if site.github %}
-        <a class="link" data-title="github.com/{{ site.github }}" href="https://github.com/{{ site.github }}" target="_blank">
-            <i class="fa fa-github"></i>
-        </a>
-    {% endif %}
-
-    {% if site.gitlab %}
-        <a class="link" data-title="gitlab.com/{{ site.gitlab }}" href="https://gitlab.com/{{ site.gitlab }}" target="_blank">
-            <i class="fa fa-gitlab"></i>
-        </a>
-    {% endif %}
-
-    {% if site.stackoverflow %}
-        <a class="link" data-title="stackoverflow.com/users/{{ site.stackoverflow }}" href="http://stackoverflow.com/users/{{ site.stackoverflow }}" target="_blank">
-            <i class="fa fa-stackoverflow"></i>
-        </a>
-    {% endif %}
-
-    {% if site.quora %}
-        <a class="link" data-title="quora.com/profile/{{ site.quora }}" href="https://www.quora.com/profile/{{ site.quora }}" target="_blank">
-            <i class="fa fa-quora"></i>
-        </a>
-    {% endif %}
-
-    {% if site.reddit %}
-        <a class="link" data-title="reddit.com/user/{{ site.reddit }}" href="https://www.reddit.com/user/{{ site.reddit }}" target="_blank">
-            <i class="fa fa-reddit"></i>
-        </a>
-    {% endif %}
-
-    {% if site.medium %}
-        <a class="link" data-title="medium.com/@{{ site.medium }}" href="https://medium.com/@{{ site.medium }}" target="_blank">
-            <i class="fa fa-medium"></i>
-        </a>
-    {% endif %}
-
-    {% if site.vimeo %}
-        <a class="link" data-title="vimeo.com/{{ site.vimeo }}" href="https://vimeo.com/{{ site.vimeo }}" target="_blank">
-            <i class="fa fa-vimeo"></i>
-        </a>
-    {% endif %}
-
-    {% if site.lanyrd %}
-        <a class="link" data-title="lanyrd.com/{{ site.lanyrd }}" href="https://lanyrd.com/{{ site.lanyrd }}" target="_blank">
-            <i class="fa fa-microphone"></i>
-        </a>
-    {% endif %}
-
-    {% if site.mastodon %}
-        <a class="link" data-title="{{ site.mastodon }}" href="https://{{ site.mastodon }}" target="_blank">
-            <i class="fa fa-mastodon"></i>
-        </a>
-    {% endif %}
-
-    {% if site.keybase %}
-        <a class="link" data-title="keybase.io/{{ site.keybase }}" href="https://keybase.io/{{ site.keybase }}" target="_blank" >
-            <i class="fa fa-keybase" ></i>
-        </a>
-    {% endif %}
-
-    {% if site.email %}
-        <a class="link" data-title="{{ site.email }}" href="mailto:{{ site.email }}">
-            <i class="fa fa-envelope"></i>
-        </a>
-    {% endif %}
-
+    {% for icon in site.social-icons %}
+    <a class="link" data-title="{{ icon.title }}" href="{{ icon.url }}" target="_blank">
+        <i class="fa fa-{{ icon.slug }}"></i>
+    </a>
+    {% endfor %}
 </div>
