--- a/_sass/_social-links.scss
+++ b/_sass/_social-links.scss
@@ -1,31 +1,25 @@
-.icon {
-    display: inline-block;
-    text-align: center;
-    width: 17px;
-    height: 17px;
-    margin: 7px auto;
-}
-
 .social-links {
     margin-top: 20px auto 0 auto;
 
   a {
-      color: $body-color;
+    color: $body-color;
     margin: 0;
     text-decoration: none;
     position: relative;
     display: inline-block;
     width: 35px;
-    height: 35px;
+
+    i {
+        font-size: 1.2rem;
+        @media (min-width: $large-breakpoint) {
+            font-size: 1.1rem;
+        }
+    }
 
     &:hover {
        color: $link-color;
     }
-    &:hover:before {
-      opacity: 1;
-      display: inline-block;
-      white-space: nowrap;
-    }
+
     &:before {
       content: attr(data-title);
       display: none;
@@ -42,7 +36,13 @@
       line-height: 22px;
       opacity: 0;
       z-index: 99;
-}
+    }
+
+    &:hover:before {
+        opacity: 1;
+        display: inline-block;
+        white-space: nowrap;
+    }
 
     &:after {
       content: "";
@@ -56,27 +56,12 @@
       border-bottom: 6px solid #222;
       opacity: 0;
       z-index: 100;
-}
+    }
 
     &:hover:after {
       opacity: 1;
-}
-}
+    }
+
+  }
 
 }
-
-// Positional adjustments for certain icons
-/* .icon-mastodon { */
-/*     position: relative; */
-/*     top: 3px; */
-/* } */
-
-/* .icon-github { */
-/*     position: relative; */
-/*     top: 1px; */
-/* } */
-
-/* .icon-mail { */
-/*     position: relative; */
-/*     top: 2px; */
-/* } */
